Mudanças de layout; hard text passado para o arquivo de strings; implementação das funcionalidades de ir para a próxima cena ou voltar para a cena anterior; correções de outros bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,38 @@
     <string name="get_actors_dialog_tag">get actors dialog</string>
     <string name="add_actor_dialog_tag">add actor dialog</string>
     <string name="new_composition_dialog_tag">new composition dialog</string>
+    <string name="composition_title">Composições</string>
+    <string name="add_composition_fab_cd">add composition</string>
+    <string name="add_dancer_title_dialog">Adicionar bailarino</string>
+    <string name="name_hint_dialog">Nome</string>
+    <string name="color_hint_dialog">Cor:</string>
+    <string name="blue_radio_btn">Azul</string>
+    <string name="red_radio_btn">Vermelho</string>
+    <string name="green_radio_btn">Verde</string>
+    <string name="add_dialog_btn">Adicionar</string>
+    <string name="edit_dancer_title_dialog">Editar bailarino</string>
+    <string name="edit_btn_dialog">Editar</string>
+    <string name="remove_dialog_btn">Remover</string>
+    <string name="select_actor_dialog_title">Selecione um ator:</string>
+    <string name="new_composition_dialog_title">Nova Composição</string>
+    <string name="description_new_composition">Informe a altura e a largura, em centímetros, do palco</string>
+    <string name="height_hint">Altura (cm)</string>
+    <string name="width_hint">Largura (cm)</string>
+    <string name="composition_name_hint">Nome da Composição</string>
+    <string name="create_add_btn_dialog">Criar</string>
+    <string name="dialog_save_message">Deseja finalizar a composição?</string>
+    <string name="dialog_save_title">Salvar composição</string>
+    <string name="dialog_save_btn">Salvar</string>
+    <string name="dialog_cancel_btn">Cancelar</string>
+    <string name="new_scene_dialog_title">Nova cena</string>
+    <string name="toast_first_scene">Primeira cena</string>
+    <string name="dialog_next_scene_message">Deseja adicionar mais uma cena?</string>
+    <string name="toast_dialog_add_name_required">Nome é obrigatório</string>
+    <string name="toast_dialog_add_color_required">Cor é obrigatório</string>
+    <string name="shape_actor">circle</string>
+    <string name="actor">Actor</string>
+    <string name="toast_new_comp_required_fields">Todos os campos são obrigatórios</string>
+    <string name="toast_new_comp_width">Informe a largura</string>
+    <string name="toast_new_comp_height">Informe a altura</string>
+    <string name="toast_new_comp_name_required">Informe um nome para a composição</string>
 </resources>
