--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TesteMoov</string>
+    <string name="app_name">78Moov</string>
     <string name="toast_empty_list">Lista de bailarinos vazia</string>
     <string name="toast_fix_actors">É necessário fixar os atores primeiro</string>
     <string name="edit_actor_dialog_tag">edit actor dialog</string>
