--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="toast_new_comp_width">Informe a largura</string>
     <string name="toast_new_comp_height">Informe a altura</string>
     <string name="toast_new_comp_name_required">Informe um nome para a composição</string>
+    <string name="one">1</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
